Added  rssFeed content to visual part of page.

--- a/dayTraderHelper/Views/Home/Index.cshtml
+++ b/dayTraderHelper/Views/Home/Index.cshtml
@@ -27,4 +27,13 @@
         <p>You can easily find a web hosting company that offers the right mix of features and price for your applications.</p>
         <p><a class="btn btn-default" href="http://go.microsoft.com/fwlink/?LinkId=301867">Learn more &raquo;</a></p>
     </div>
+
+    <audio id="soundTag01" src="~/Content/Sounds/Evil_laugh_Male_9-Himan-1598312646.wav" />
+
+
 </div>
+
+<ul id="rssList" />
+
+<div id="test">kjklj</div>
+<p>lol >??????</p>
