Added: sound for coming feed

--- a/dayTraderHelper/Views/Home/Index.cshtml
+++ b/dayTraderHelper/Views/Home/Index.cshtml
@@ -1,5 +1,7 @@
 ﻿
-
+<audio id="alarmSound">
+    <source src="~/Content/Sounds/Train.wav"  />
+</audio>
 
 <div class="container">
     <div id="rssList" class="list-group">
