Added Contact Page

--- a/dayTraderHelper/Views/Home/Index.cshtml
+++ b/dayTraderHelper/Views/Home/Index.cshtml
@@ -1,7 +1,7 @@
 ﻿
-<audio id="alarmSound">
+@*<audio id="alarmSound">
     <source src="~/Content/Sounds/Train.wav"  />
-</audio>
+</audio>*@
 
 <div class="container">
     <div id="rssList" class="list-group">
