--- a/dayTraderHelper/Views/Shared/_Layout.cshtml
+++ b/dayTraderHelper/Views/Shared/_Layout.cshtml
@@ -20,5 +20,6 @@
     @Scripts.Render("~/bundles/bootstrap")
     @RenderSection("scripts", required: false)
     <script src="~/Scripts/ajax/ebiData.js"></script>
+    <script src="~/Scripts/ajax/espiData.js"></script>
 </body>
 </html>
